traces/bug_23.txt
src/medit/persp.c:37: error: DEAD_STORE
  The value written to &rapx (type float) is never used.
Showing all 1 steps of the trace


src/medit/persp.c:37:3: Write of unused value
35.     /* new fovy */
36.     tgalpha = tan(p->fovy*DTOR);
37.     rapx    = fabs(p->rubfx-p->rubix) / (float)sc->par.xs;
        ^
38.     rapy    = fabs(p->rubfy-p->rubiy) / (float)sc->par.ys;
39.     
